--- a/src/main.css
+++ b/src/main.css
@@ -23,19 +23,7 @@ button:active {
 }
 
 #buttons {
-    width: 25%;
-    height: 45%;
-    display: grid;
-    grid-template-columns: auto auto auto auto auto;
     justify-content: center;
-}
-
-.beforemain {
-    display: inline-block;
-    justify-content: center;
-}
-#operators {
-    display: flex;
 }
 #btn-1,
 #btn-2,
@@ -50,6 +38,16 @@ button:active {
 #c,
 #e,
 #b {
+    width: 100%;
+    height: 100%;
+}
+#form {
+    display: flex;
+    justify-content: center;
+    width:auto;
+    height: 20px;
+}
+#form input {
     width: 100%;
     height: 100%;
 }
