--- a/src/main.css
+++ b/src/main.css
@@ -5,8 +5,8 @@
 button {
     padding: 25px;
 }
-#dot, #e {
-    padding: 6.5px;
+#btn-bracket-open, #btn-bracket-close {
+    padding: 12.5px;
 }
 
 button:hover {
@@ -40,7 +40,7 @@ button:active {
 #btn-0,
 #c,
 #e,
-#b {
+#bt {
     width: 100%;
     height: 100%;
 }
@@ -53,4 +53,9 @@ button:active {
 #form input {
     width: 100%;
     height: 100%;
+}
+
+#b {
+    /* width: 16px;
+    height: 28px; */
 }
