--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;;
+    padding: 100px;
+
+}
+
 button {
     padding: 25px;
 }
@@ -17,15 +26,15 @@ button:active {
     background-color: black;
 }
 
-#main {
+/* #main {
     display: flex;
-    width: 100%;
+    width: 660px;
     justify-content: center;
-    height: 880px;
+    height: 660px;
     align-items: center;
-}
+} */
 
-#buttons {
+#calculator {
     justify-content: center;
     width: 353px;
 }
